Made some more changes to the layout and added a footer to display information about me.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
 <body>
     <header>
-        
+        <!-- Placeholder button -->
         <button class="modebtn">Light-Dark Mode</button>
     </header>
     <div class="blog-content">
         <img class="blog-img" src="./assets/images/my-first-blog-sprite.png">
         <section class="blog-form">
             <h2>What's on your mind?</h2>
+            <!-- Created divs be able to separate each input in css  -->
             <form>
                 <div>
                     <label>Username</label>
@@ -35,10 +36,17 @@
                 <div>
                     <input type="submit" value="Submit">
                 </div>
-                
+
             </form>
         </section>
     </div>
+    <!-- Footer with links to my github and contact information -->
+    <footer>
+        <h3>Made by Christopher Giordano</h3>
+        <a href="https://github.com/Milkytea6" alt="A link to my github page.">My Github</a>
+        <p>chrisgcpg@gmail.com</p>
+
+    </footer>
 
 
     <!-- logic.js is for both webpages, while form.js will only affect the form page. -->
