--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <input type="text" id="content" name="content">
                 </div>
                 <div>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" id="submit-btn">
                 </div>
 
             </form>
