Made it so when the user leave an input empty, it will alert saying inputs cannot be blank. Made it so the submit button will redirect the user to a new page. Also added a back button and light/dark toggle to the blog page, but it does not work yet.

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="assets/css/blog.css">
 </head>
 <body>
+    <header>
+        <button id="back-btn">&larr; Back</button>
+        <!-- Placeholder button -->
+        <button class="mode-btn">Light-Dark Mode</button>
+    </header>
     
     <!-- logic.js is for both webpages, while blog.js will only affect the blog page. -->
     <script src="./assets/js/logic.js"></script>
