Added functionality to the mode switch button. Now both pages can switch from light and dark modes. Back button still doesn't work yet.

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <header>
         <button id="back-btn">&larr; Back</button>
         <!-- Placeholder button -->
-        <button class="mode-btn">Light-Dark Mode</button>
+        <button id="mode-btn-blog">Light-Dark Mode</button>
     </header>
     
     <!-- logic.js is for both webpages, while blog.js will only affect the blog page. -->
