Added a footer to the blog page. Added styles to links when in dark-mode. Added a way to access objects in local storage on the blog page using javascript. Object are undefined, still needs fixing.

--- a/blog.html
+++ b/blog.html
@@ -10,10 +10,19 @@
 </head>
 <body>
     <header>
+        <h1>My First Blog</h1>
         <button id="back-btn">&larr; Back</button>
         <!-- Placeholder button -->
         <button id="mode-btn-blog">Light-Dark Mode</button>
     </header>
+    <section id="blogPosts">
+        
+    </section>
+    <footer>
+        <p>Created by Christopher Giordano</p>
+        <a href="https://github.com/Milkytea6" alt="link to my Github profile.">My Github</a>
+        <a href="https://milkytea6.github.io/my-portfolio/" alt="A link to my portfolio">My portfolio</a>
+    </footer>
     
     <!-- logic.js is for both webpages, while blog.js will only affect the blog page. -->
     <script src="./assets/js/logic.js"></script>
