Moved the mode-switch code to logic.js and styles.css so it wasn't repeated in wach document. Fixed an issue where I was stringifying twice making the object read undefined on the blog page. Also changed where the objects will apend by changeing the parent from body to section. Still need to style the blog page , but all the functionality is working.

--- a/blog.html
+++ b/blog.html
@@ -6,14 +6,14 @@
     <title>Personal Blog</title>
     <!-- styles.css is for both webpages, while blog.css will only affect the blog page. -->
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/blog.css">
+    <link rel="stylesheet" href="./assets/css/blog.css">
 </head>
 <body>
     <header>
         <h1>My First Blog</h1>
         <button id="back-btn">&larr; Back</button>
         <!-- Placeholder button -->
-        <button id="mode-btn-blog">Light-Dark Mode</button>
+        <button id="mode-btn">Light-Dark Mode</button>
     </header>
     <section id="blogPosts">
         
@@ -21,7 +21,7 @@
     <footer>
         <p>Created by Christopher Giordano</p>
         <a href="https://github.com/Milkytea6" alt="link to my Github profile.">My Github</a>
-        <a href="https://milkytea6.github.io/my-portfolio/" alt="A link to my portfolio">My portfolio</a>
+        <a href="https://milkytea6.github.io/my-portfolio/" alt="A link to my portfolio">My Portfolio</a>
     </footer>
     
     <!-- logic.js is for both webpages, while blog.js will only affect the blog page. -->
