--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- Placeholder button -->
-        <button id="mode-btn-form">Light-Dark Mode</button>
+        <button id="mode-btn">Light-Dark Mode</button>
     </header>
     <div class="blog-content">
         <img class="blog-img" src="./assets/images/my-first-blog-sprite.png">
