Added styles to blog page and now each post is in it's own border with each section bordered off. Also added borders to the footer and header on both pages.

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,24 +9,28 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/blog.css">
 </head>
+
 <body>
     <header>
         <h1>My First Blog</h1>
-        <button id="back-btn">&larr; Back</button>
-        <!-- Placeholder button -->
-        <button id="mode-btn">Light-Dark Mode</button>
+        <div class="blog-btns">
+            <button id="back-btn">&larr; Back</button>
+            <!-- Placeholder button -->
+            <button id="mode-btn">☀️/🌙</button>
+        </div>
     </header>
     <section id="blogPosts">
-        
+
     </section>
     <footer>
         <p>Created by Christopher Giordano</p>
         <a href="https://github.com/Milkytea6" alt="link to my Github profile.">My Github</a>
         <a href="https://milkytea6.github.io/my-portfolio/" alt="A link to my portfolio">My Portfolio</a>
     </footer>
-    
+
     <!-- logic.js is for both webpages, while blog.js will only affect the blog page. -->
     <script src="./assets/js/logic.js"></script>
     <script src="./assets/js/blog.js"></script>
 </body>
+
 </html>
